# AI-Tutoring

./: .gitignore  README.md  main.py  navigation.py  pyproject.toml  requirements.txt
.deepeval/: .deepeval_telemetry.txt
.specify/: integration.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
database/: auth_db.py  student_db.py  survey_ai_db.py  survey_traditional_db.py
evaluation/: __init__.py  eval_rag_live.py  metrics.py  models.py  reporting.py  run_evaluation.py
evaluation/datasets/: quiz_cases.json  rag_cases.json  rag_live_cases.json
evaluation/datasets/docs/: sample_python_basics.txt
pages/: dummyquiz.txt  my_account.py  post_survey.py  pre_survey.py  quiz_help.py  topic_help.py
styles/: style.css
tests/: test_auth_db.py  test_evaluation.py  test_quiz_utils.py  test_rag_utils.py
utils/: chart_utils.py  css_utils.py  llm_client.py  quiz_utils.py  rag_utils.py  subject_management.py
