[project]
name = "restructured"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "certifi>=2026.4.22",
    "chromadb==0.4.24",
    "langchain==0.3.0",
    "langchain-community==0.3.0",
    "langchain-core==0.3.0",
    "langchain-text-splitters==0.3.0",
    "mammoth==1.7.1",
    "openai>=1.52.0",
    "pandas==2.2.1",
    "plotly==5.20.0",
    "pymongo==4.7.2",
    "pymupdf==1.24.1",
    "python-docx==1.1.0",
    "python-dotenv==1.0.1",
    "sentence-transformers==2.7.0",
    "streamlit==1.32.0",
    "streamlit-chat==0.1.1",
    "watchdog==4.0.0",
]
