[project]
name = "restructured"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "certifi>=2026.4.22",
    "chromadb==0.4.24",
    "deepeval>=4.0.5,<5",
    "langchain==0.3.0",
    "langchain-community==0.3.0",
    "langchain-core==0.3.0",
    "langchain-text-splitters==0.3.0",
    "mammoth==1.7.1",
    "numpy==1.26.4",
    "openai>=1.52.0",
    "pandas==2.2.1",
    "plotly==5.20.0",
    "pytest>=8.0.0",
    "pymupdf==1.24.1",
    "python-docx==1.1.0",
    "python-dotenv>=1.1.1,<2",
    "sentence-transformers==2.7.0",
    "streamlit==1.32.0",
    "streamlit-chat==0.1.1",
    "watchdog==4.0.0",
    "rank-bm25>=0.2.2",
]

[tool.pytest.ini_options]
addopts = ["-p", "no:rerunfailures"]
pythonpath = ["."]
testpaths = ["tests"]
